# 285191U013-IPFCE-assignment-1

./: CMakeLists.txt  Makefile  README.md  compile_commands.json
.devcontainer/: devcontainer.json
include/: add.h
src/: add.c  max.c
tests/: add.cpp  max.cpp  max_sum.cpp
tests/src/: tests.cpp
